# Genesis

./: .env  .env.example  .gitignore  README  README.md  README_V2.md  pyproject.toml  requirements.txt
config/strategies/: opening_range_reversion.yaml  opening_range_reversion_ny_equity.yaml
data/alpha_store/: day_mtf_btc_from_scratch_diagnostics.csv  day_mtf_btc_from_scratch_equity.csv  day_mtf_btc_from_scratch_summary.csv  opening_range_reversion_crypto_no_go.md  opening_range_reversion_ny_daily_breakdown.csv  opening_range_reversion_ny_equity.csv  opening_range_reversion_ny_equity_market_fit_log.md  opening_range_reversion_ny_equity_qqq_daily_breakdown.csv  opening_range_reversion_ny_equity_qqq_equity.csv  opening_range_reversion_ny_equity_qqq_invalid_sessions.csv  opening_range_reversion_ny_equity_qqq_monthly_breakdown.csv  opening_range_reversion_ny_equity_qqq_signals.csv  opening_range_reversion_ny_equity_qqq_summary.csv  opening_range_reversion_ny_equity_qqq_trades.csv  opening_range_reversion_ny_equity_qqq_validation.md  opening_range_reversion_ny_equity_qqq_weekly_breakdown.csv  opening_range_reversion_ny_equity_spy_daily_breakdown.csv  opening_range_reversion_ny_equity_spy_equity.csv  opening_range_reversion_ny_equity_spy_gaps.csv  opening_range_reversion_ny_equity_spy_invalid_sessions.csv  opening_range_reversion_ny_equity_spy_monthly_breakdown.csv  opening_range_reversion_ny_equity_spy_signals.csv  opening_range_reversion_ny_equity_spy_summary.csv  opening_range_reversion_ny_equity_spy_trades.csv  opening_range_reversion_ny_equity_spy_validation.md  (+14 more)
scripts/: _bootstrap.py  check_bingx_connection.py  check_bingx_demo.py  check_bingx_demo_cycle.py  check_bingx_demo_order.py  close_bingx_demo_positions.py  open_bingx_demo_position.py  run_alpha_generation.py  run_alpha_pipeline.py  run_alpha_research.py  run_backtest.py  run_backtest_alpha.py  run_backtest_day_mtf_reversal.py  run_backtest_genesis_swing.py  run_backtest_opening_range_reversion.py  run_data_pipeline.py  run_demo_loop_journal_report.py  run_demo_scalping_daemon.py  run_demo_trading_loop.py  run_feature_pipeline.py  run_health_check.py  run_orr_postmortem.py  run_regime_analysis.py  run_swing_grid_search.py
tests/: __init__.py
(+110 files in other folders)
