[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis"
version = "0.1.0"
description = "Quant research platform for crypto alpha generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns==4.0.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "backtrader==1.9.78.123",
    "beautifulsoup4==4.14.3",
    "bingx==0.0.127",
    "ccxt==4.5.42",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "coincurve==21.0.0",
    "contourpy==1.3.3",
    "cryptography==46.0.5",
    "curl_cffi==0.13.0",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "idna==3.11",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "multidict==6.7.1",
    "multitasking==0.0.12",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "peewee==4.0.1",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "propcache==0.4.1",
    "protobuf==7.34.0",
    "pyarrow==23.0.1",
    "pycares==5.0.1",
    "pycparser==3.0",
    "PyYAML==6.0.3",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "requests==2.32.5",
    "setuptools==82.0.1",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "websockets==16.0",
    "yarl==1.23.0",
    "yfinance==1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["tests/_tmp_data"]
